# philter

./: .gitignore  CMakeLists.txt  README.md  philter.filtergraph  philter.jucer  workspace.sh
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
poc/: README.md  main.py  requirements.txt
resource/: ph_editor.uidesc  pheditor.uidesc
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  params.h  ph_cids.h  ph_controller.cpp  ph_entry.cpp  ph_processor.cpp  ph_processor.h  phcids.h  phcontroller.cpp  phcontroller.h  phentry.cpp  phprocessor.cpp  phprocessor.h  version.h
